--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
   border-radius: 8px;
   background: url(/assets/images/pexels-andres-ayrton-6551415.jpg);
   background-size: contain;
-  color: #fff;
+  color: #191616;
 }
 
 .result {
